--- a/styles/main.css
+++ b/styles/main.css
@@ -3,12 +3,10 @@
  * Copyright 2012-2014 thoughtbot, inc.
  * MIT License */
 html {
-  -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
 *, *:before, *:after {
-  -webkit-box-sizing: inherit;
   -moz-box-sizing: inherit;
   box-sizing: inherit; }
 
@@ -261,7 +259,8 @@ button[disabled], html input[disabled] {
  * 2. Remove excess padding in IE 8/9.
  */
 input[type="checkbox"], input[type="radio"] {
-  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+       box-sizing: border-box;
   /* 1 */
   padding: 0;
   /* 2 */ }
@@ -275,7 +274,6 @@ input[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
   -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box;
   /* 2 */
   box-sizing: content-box; }
 
@@ -321,14 +319,14 @@ button, input[type="submit"] {
   -webkit-font-smoothing: antialiased;
   background-color: transparent;
   border-radius: 2px;
-  color: white;
   display: inline-block;
   font-size: 1em;
   line-height: 1em;
   font-weight: bold;
   padding: 0;
   text-decoration: none;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  font-family: 'sans', sans-serif; }
   button:hover, input[type="submit"]:hover {
     color: white; }
   button:disabled, input[type="submit"]:disabled {
@@ -402,7 +400,7 @@ body {
   line-height: 1.5; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: Calluna;
+  font-family: 'sans', sans-serif;
   line-height: 1.25;
   margin: 0;
   text-rendering: optimizeLegibility; }
@@ -414,7 +412,13 @@ h2 {
   font-size: 2em; }
 
 h3 {
-  font-size: 1.75em; }
+  font-size: 1em;
+  font-family: CircularStd-Bold;
+  font-size: 16px;
+  color: #222222;
+  letter-spacing: 0.66px;
+  line-height: 28px;
+  text-transform: uppercase; }
 
 h4 {
   font-size: 1.5em; }
@@ -426,19 +430,33 @@ h6 {
   font-size: 1em; }
 
 p {
-  margin: 0 0 0.75em; }
+  margin: 0.75em 0;
+  text-indent: 1em; }
 
-a {
+a.cta {
   -webkit-transition: color 0.1s linear;
-  -moz-transition: color 0.1s linear;
   transition: color 0.1s linear;
-  color: #477DCA;
-  text-decoration: none; }
-  a:hover {
+  color: rgba(0, 0, 0, 0.87);
+  text-decoration: none;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.87);
+  font-family: 'sans', sans-serif;
+  font-weight: normal; }
+  a.cta:hover {
     color: #2c5999; }
-  a:active, a:focus {
+  a.cta:active, a.cta:focus {
     color: #2c5999;
     outline: none; }
+  a.cta:after {
+    content: "";
+    width: 1em;
+    height: 0.7em;
+    margin-left: 0.5em;
+    display: inline-block;
+    background: url(../images/right-arrow-black@2x.png) center center no-repeat;
+    background: url(../images/right-arrow-black.svg) center center no-repeat;
+    background-size: 100% 100%;
+    position: absolute;
+    margin-top: 5px; }
 
 hr {
   border-bottom: 1px solid #DDD;
@@ -486,11 +504,9 @@ label {
     display: none; }
 
 textarea, input[type="email"], input[type="number"], input[type="password"], input[type="search"], input[type="tel"], input[type="text"], input[type="url"], input[type="color"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="time"], input[type="week"], select[multiple=multiple] {
-  -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-transition: border-color;
-  -moz-transition: border-color;
   transition: border-color;
   background-color: white;
   border-radius: 2px;
@@ -571,18 +587,54 @@ button, input[type="submit"] {
   appearance: none;
   border: none;
   cursor: pointer;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   vertical-align: middle;
   white-space: nowrap; }
 
 button.cta {
+  font-size: 1em;
+  line-height: 1em;
+  font-weight: bold; }
+  button.cta--white {
+    color: white; }
+    button.cta--white:after {
+      content: "";
+      width: 1em;
+      height: 0.85em;
+      margin-left: 0.5em;
+      display: inline-block;
+      background: url(../images/right-arrow@2x.png) center center no-repeat;
+      background: url(../images/right-arrow.svg) center center no-repeat;
+      background-size: 100% 100%; }
+
+button, input[type="submit"] {
+  -webkit-font-smoothing: antialiased;
+  background-color: transparent;
+  border-radius: 2px;
+  display: inline-block;
+  padding: 0;
+  text-decoration: none;
+  text-transform: uppercase;
   font-family: 'sans', sans-serif; }
+  button:hover, input[type="submit"]:hover {
+    color: white; }
+  button:disabled, input[type="submit"]:disabled {
+    cursor: not-allowed;
+    opacity: 0.5; }
 
 html {
-  box-sizing: border-box; }
+  -moz-box-sizing: border-box;
+       box-sizing: border-box; }
 
 *, *:before, *:after {
-  box-sizing: inherit; }
+  -moz-box-sizing: inherit;
+       box-sizing: inherit; }
+
+div {
+  overflow: auto; }
 
 /* Bitters 0.10.0
  * http://bitters.bourbon.io
@@ -604,7 +656,7 @@ html {
   display: block;
   margin-right: 2.3576515979%;
   width: 6.1721527019%;
-  padding: 0 20px; }
+  padding: 0 10px; }
   .l-l1:last-child {
     margin-right: 0; }
 
@@ -613,7 +665,7 @@ html {
   display: block;
   margin-right: 2.3576515979%;
   width: 14.7019570017%;
-  padding: 0 20px; }
+  padding: 0 10px; }
   .l-l2:last-child {
     margin-right: 0; }
 
@@ -622,7 +674,7 @@ html {
   display: block;
   margin-right: 2.3576515979%;
   width: 23.2317613015%;
-  padding: 0 20px; }
+  padding: 0 10px; }
   .l-l3:last-child {
     margin-right: 0; }
 
@@ -631,7 +683,7 @@ html {
   display: block;
   margin-right: 2.3576515979%;
   width: 31.7615656014%;
-  padding: 0 20px; }
+  padding: 0 10px; }
   .l-l4:last-child {
     margin-right: 0; }
 
@@ -640,7 +692,7 @@ html {
   display: block;
   margin-right: 2.3576515979%;
   width: 40.2913699012%;
-  padding: 0 20px; }
+  padding: 0 10px; }
   .l-l5:last-child {
     margin-right: 0; }
 
@@ -649,7 +701,7 @@ html {
   display: block;
   margin-right: 2.3576515979%;
   width: 48.821174201%;
-  padding: 0 20px; }
+  padding: 0 10px; }
   .l-l6:last-child {
     margin-right: 0; }
 
@@ -658,7 +710,7 @@ html {
   display: block;
   margin-right: 2.3576515979%;
   width: 57.3509785009%;
-  padding: 0 20px; }
+  padding: 0 10px; }
   .l-l7:last-child {
     margin-right: 0; }
 
@@ -667,7 +719,7 @@ html {
   display: block;
   margin-right: 2.3576515979%;
   width: 65.8807828007%;
-  padding: 0 20px; }
+  padding: 0 10px; }
   .l-l8:last-child {
     margin-right: 0; }
 
@@ -676,7 +728,7 @@ html {
   display: block;
   margin-right: 2.3576515979%;
   width: 74.4105871005%;
-  padding: 0 20px; }
+  padding: 0 10px; }
   .l-l9:last-child {
     margin-right: 0; }
 
@@ -685,7 +737,7 @@ html {
   display: block;
   margin-right: 2.3576515979%;
   width: 82.9403914003%;
-  padding: 0 20px; }
+  padding: 0 10px; }
   .l-l10:last-child {
     margin-right: 0; }
 
@@ -694,7 +746,7 @@ html {
   display: block;
   margin-right: 2.3576515979%;
   width: 91.4701957002%;
-  padding: 0 20px; }
+  padding: 0 10px; }
   .l-l11:last-child {
     margin-right: 0; }
 
@@ -703,9 +755,84 @@ html {
   display: block;
   margin-right: 2.3576515979%;
   width: 100%;
-  padding: 0 20px; }
+  padding: 0 10px; }
   .l-l12:last-child {
     margin-right: 0; }
+
+.l-lshift-12 {
+  margin-left: -102.3576515979%; }
+
+.l-lshift-11 {
+  margin-left: -93.8278472981%; }
+
+.l-lshift-10 {
+  margin-left: -85.2980429983%; }
+
+.l-lshift-9 {
+  margin-left: -76.7682386985%; }
+
+.l-lshift-8 {
+  margin-left: -68.2384343986%; }
+
+.l-lshift-7 {
+  margin-left: -59.7086300988%; }
+
+.l-lshift-6 {
+  margin-left: -51.178825799%; }
+
+.l-lshift-5 {
+  margin-left: -42.6490214991%; }
+
+.l-lshift-4 {
+  margin-left: -34.1192171993%; }
+
+.l-lshift-3 {
+  margin-left: -25.5894128995%; }
+
+.l-lshift-2 {
+  margin-left: -17.0596085997%; }
+
+.l-lshift-1 {
+  margin-left: -8.5298042998%; }
+
+.l-lshift0 {
+  margin-left: 0%; }
+
+.l-lshift1 {
+  margin-left: 8.5298042998%; }
+
+.l-lshift2 {
+  margin-left: 17.0596085997%; }
+
+.l-lshift3 {
+  margin-left: 25.5894128995%; }
+
+.l-lshift4 {
+  margin-left: 34.1192171993%; }
+
+.l-lshift5 {
+  margin-left: 42.6490214991%; }
+
+.l-lshift6 {
+  margin-left: 51.178825799%; }
+
+.l-lshift7 {
+  margin-left: 59.7086300988%; }
+
+.l-lshift8 {
+  margin-left: 68.2384343986%; }
+
+.l-lshift9 {
+  margin-left: 76.7682386985%; }
+
+.l-lshift10 {
+  margin-left: 85.2980429983%; }
+
+.l-lshift11 {
+  margin-left: 93.8278472981%; }
+
+#home .about .cta {
+  margin-top: 50px; }
 
 /* Bitters 0.10.0
  * http://bitters.bourbon.io
@@ -723,45 +850,62 @@ header {
   z-index: 500;
   top: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.54);
+  background: white;
   width: 100%;
   padding: 0 10px; }
-  header .brand {
-    float: left;
-    line-height: 40px; }
 
-nav.m-globalnav {
+.m-globalnav {
   line-height: 40px;
   padding: 20px;
   float: left;
   display: block;
   margin-right: 2.3576515979%;
   width: 100%;
-  color: white; }
-  nav.m-globalnav:last-child {
+  color: rgba(0, 0, 0, 0.87); }
+  .m-globalnav:last-child {
     margin-right: 0; }
-  nav.m-globalnav ul {
+  .m-globalnav .brand {
+    float: left; }
+    .m-globalnav .brand a {
+      font-weight: 800;
+      text-indent: -9999px;
+      line-height: 18px;
+      display: inline-block;
+      background: url(../images/logo@2x.png) center center no-repeat;
+      background: url(../images/logo.svg) center center no-repeat;
+      width: 78px;
+      height: 18px; }
+  .m-globalnav ul {
     float: right; }
-  nav.m-globalnav li {
+  .m-globalnav li {
     float: left;
     text-transform: uppercase;
     margin-left: 40px; }
-  nav.m-globalnav a {
-    color: rgba(255, 255, 255, 0.87); }
+  .m-globalnav a {
+    color: rgba(0, 0, 0, 0.87);
+    text-decoration: none;
+    font-size: 0.875em;
+    letter-spacing: 2px;
+    font-weight: 600; }
 
 .m-splash {
-  position: absolute;
-  top: 0;
-  left: 0;
+  /*
+	position: absolute;
+	top: 0;
+	left: 0;
+*/
+  position: relative;
   width: 100%;
-  height: 100%; }
+  min-height: 702px;
+  border: 10px solid white; }
   .m-splash .hero-copy {
     font-size: 2em;
     font-weight: bold;
-    line-height: 1.2; }
+    line-height: 1.2;
+    text-indent: 0; }
   .m-splash--launch {
     background: black;
-    color: rgba(255, 255, 255, 0.87); }
+    color: white; }
     .m-splash--launch .m-callout {
       position: absolute;
       bottom: 100px;
@@ -773,17 +917,44 @@ nav.m-globalnav {
   left: 30px;
   width: 60%; }
   .m-scrollcta a {
-    color: rgba(255, 255, 255, 0.87);
+    color: white;
     font-family: 'sans', sans-serif;
     font-size: 0.8em;
-    line-height: 1em; }
+    line-height: 1em;
+    text-decoration: none; }
+  .m-scrollcta:after {
+    content: "";
+    width: 0.3em;
+    height: 0.45em;
+    margin-left: 0.15em;
+    display: inline-block;
+    background: url(../images/small-down-arrow@2x.png) center center no-repeat;
+    background: url(../images/small-down-arrow.svg) center center no-repeat;
+    background-size: 100% 100%; }
+
+.m-hero-copy {
+  margin: 4.5em 0 2.25em 0;
+  font-size: 1.5em;
+  line-height: 1.3; }
+
+.m-home-key-points {
+  margin-bottom: 30px; }
 
 .m-team__member:nth-child(3n) {
   margin-right: 0; }
 .m-team__member:nth-child(3n+1) {
   clear: left; }
 
-footer nav {
+.m-collage__image {
+  position: absolute;
+  z-index: -1; }
+
+.m-collection {
+  text-align: center; }
+
+.m-footer--signup {
+  background: white; }
+.m-footer__nav {
   line-height: 40px;
   padding: 20px;
   float: left;
@@ -791,15 +962,36 @@ footer nav {
   margin-right: 2.3576515979%;
   width: 100%;
   color: white; }
-  footer nav:last-child {
+  .m-footer__nav:last-child {
     margin-right: 0; }
-  footer nav ul {
+  .m-footer__nav__legal {
+    float: left; }
+  .m-footer__nav__help {
     float: right; }
-  footer nav li {
+  .m-footer__nav li {
     float: left;
-    text-transform: uppercase;
-    margin-left: 40px; }
-  footer nav a {
-    color: rgba(0, 0, 0, 0.87); }
+    margin-left: 1em;
+    color: rgba(0, 0, 0, 0.87);
+    font-size: 10px;
+    color: rgba(0, 0, 0, 0.54);
+    line-height: 13px; }
+  .m-footer__nav a {
+    text-decoration: none;
+    color: inherit; }
+    .m-footer__nav a:hover {
+      text-decoration: underline; }
 
+.lookbook {
+  padding-top: 100px; }
+  .lookbook .js-masonry li {
+    padding: 0 !important;
+    margin-bottom: 2.3576515979%; }
+  .lookbook .js-masonry img {
+    width: 100%;
+    display: block; }
+  .lookbook .m-footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%; }
 /*# sourceMappingURL=main.css.map */
