--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -2,13 +2,13 @@
 $sans-serif: 'sans', sans-serif;
 $serif: 'serif', serif;
 $base-font-family: Calluna;
-$header-font-family: $base-font-family;
+$header-font-family: $sans-serif; //$base-font-family;
 
 // Font Sizes
 $base-font-size: 1em;
 $h1-font-size: $base-font-size * 2.25;
 $h2-font-size: $base-font-size * 2;
-$h3-font-size: $base-font-size * 1.75;
+$h3-font-size: $base-font-size; //  * 1.75;
 $h4-font-size: $base-font-size * 1.5;
 $h5-font-size: $base-font-size * 1.25;
 $h6-font-size: $base-font-size;
@@ -31,7 +31,7 @@ $light-red: #FBE3E4;
 $light-yellow: #FFF6BF;
 $light-green: #E6EFC2;
 $black: rgba(0,0,0,0.87);
-$white: rgba(255,255,255,0.87);
+$white: white; // rgba(255,255,255,0.87);
 
 // Background Color
 $base-background-color: white;
@@ -73,5 +73,5 @@ $lightgrey: rgba(0,0,0,0.24);
 
 
 // Nav Colors
-$nav-link-color: $white;
+$nav-link-color: $black;
 $footer-link-color: $black;
