--- a/styles/base/extends/_button.scss
+++ b/styles/base/extends/_button.scss
@@ -2,7 +2,6 @@
 	-webkit-font-smoothing: antialiased;
 	background-color: $base-button-color;
 	border-radius: $base-border-radius;
-	color: white;
 	display: inline-block;
 	font-size: $base-font-size;
 	line-height: $base-font-size;
@@ -11,6 +10,8 @@
 	padding: 0;
 	text-decoration: none;
 	text-transform: uppercase;
+	
+	font-family: $sans-serif;
 
 	&:hover {
 // 		background-color: $hover-button-color;
