--- a/styles/main.scss
+++ b/styles/main.scss
@@ -14,27 +14,39 @@ header {
 	z-index: 500;
 	top: 0;
 	left: 0;
-	background: $dark-gray;
+	background: $white; // $dark-gray;
 	width: 100%;
 	padding: 0 10px;
-	
-	.brand {
-		float: left;
-		line-height: 40px;
-	}
 }
 
-nav.m-globalnav {
+.m-globalnav {
 	
 	line-height: 40px;
 	padding: 20px;
 	
 	@include span-columns(12);
 	
-	color: white;
+	color: $black; // white;
 	
 	.brand {
 		
+		float: left;
+		
+		a {
+			font-weight: 800;
+			text-indent: -9999px;
+			
+			line-height: 18px;
+			
+			display: inline-block;
+			
+			background: url(../images/logo@2x.png) center center no-repeat;
+			background: url(../images/logo.svg) center center no-repeat;
+			
+			width: 78px;
+			height: 18px;
+			
+		}
 	}
 	
 	ul {
@@ -49,24 +61,31 @@ nav.m-globalnav {
 	
 	a {
 		color: $nav-link-color;
+		text-decoration: none;
+		font-size: .875*$base-font-size;
+// 		color: $white;
+		letter-spacing: 2px;
+		font-weight: 600;
 	}
 }
 
 .m-splash {
-	
+/*
 	position: absolute;
-	
 	top: 0;
 	left: 0;
+*/
+	position: relative;
 	width: 100%;
-	height: 100%;
-	
+	min-height: 702px;
+	border: 10px solid $white;
 // 	overflow: auto;
 	
 	.hero-copy {
 		font-size: 2*$base-font-size;
 		font-weight: bold;
 		line-height: 1.2;
+		text-indent: 0;
 	}
 	
 	
@@ -97,11 +116,33 @@ nav.m-globalnav {
 		font-family: $sans-serif;
 		font-size: .8*$base-font-size;
 		line-height: $base-font-size;
+		text-decoration: none;
 	}
+	
+	&:after {
+			content: "";
+			width: .3*$base-font-size;
+			height: .45*$base-font-size;
+			margin-left: .15*$base-font-size;
+			display: inline-block;
+			background: url(../images/small-down-arrow@2x.png) center center no-repeat;
+			background: url(../images/small-down-arrow.svg) center center no-repeat;
+			background-size: 100% 100%;
+		}
+}
+
+.m-hero-copy {
+	margin: $base-spacing*3 0 $base-spacing*3/2 0;
+	font-size: 1.5*$base-font-size;
+	line-height: 1.3;
 }
 
 .m-team {
 	
+}
+
+.m-home-key-points {
+	margin-bottom: 30px;
 }
 
 .m-team__member {
@@ -117,8 +158,36 @@ nav.m-globalnav {
 }
 
 
-footer {
-	nav {
+.m-collage {
+	
+	&__image {
+		
+		position: absolute;
+		
+		z-index: -1;
+		
+		
+	}
+	
+}
+
+.m-collection {
+	text-align: center;
+}
+
+
+
+.m-footer {
+	
+	&--signup {
+		background: $white;
+	}
+	
+	&__form {
+		
+	}
+	
+	&__nav {
 		line-height: 40px;
 		padding: 20px;
 	
@@ -130,18 +199,61 @@ footer {
 			
 		}
 		
-		ul {
+		&__legal {
+			float: left;
+		}
+		
+		&__help {
 			float: right;
 		}
 		
 		li {
 			float: left;
-			text-transform: uppercase;
-			margin-left: 40px;
+// 			text-transform: uppercase;
+			margin-left: $base-font-size;
+			color: $footer-link-color;
+						
+			font-size: 10px;
+			color: $dark-gray;
+			line-height: 13px;
+			
+			
 		}
 		
 		a {
-			color: $footer-link-color;
+			text-decoration: none;
+			color: inherit;
+			
+			&:hover {
+				text-decoration: underline;
+			}
 		}
 	}
+}
+
+
+.lookbook {
+	
+	padding-top: 100px;
+	
+	.js-masonry {
+		
+		li {
+			padding: 0 !important;
+			margin-bottom: 2.3576515979%;
+		}
+		
+		img {
+			width: 100%;
+			display: block;
+		}
+	}
+	
+	.m-footer {
+		position: fixed;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+	}
+	
 }
