--- a/styles/main.css
+++ b/styles/main.css
@@ -406,7 +406,8 @@ h1, h2, h3, h4, h5, h6 {
   text-rendering: optimizeLegibility; }
 
 h1 {
-  font-size: 2.25em; }
+  font-size: 2.25em;
+  font-family: 'serif', serif; }
 
 h2 {
   font-size: 2em; }
@@ -894,9 +895,9 @@ header {
 	top: 0;
 	left: 0;
 */
-  position: relative;
+  position: absolute;
   width: 100%;
-  min-height: 702px;
+  height: 100%;
   border: 10px solid white; }
   .m-splash .hero-copy {
     font-size: 2em;
@@ -933,9 +934,12 @@ header {
     background-size: 100% 100%; }
 
 .m-hero-copy {
-  margin: 4.5em 0 2.25em 0;
+  margin: 3em 0;
   font-size: 1.5em;
   line-height: 1.3; }
+
+.m-team {
+  margin-top: 3em; }
 
 .m-home-key-points {
   margin-bottom: 30px; }
@@ -981,17 +985,57 @@ header {
     .m-footer__nav a:hover {
       text-decoration: underline; }
 
+.home .m-footer {
+  position: absolute;
+  top: 100%;
+  width: 100%; }
+  .home .m-footer__nav {
+    padding: 10px 20px 20px; }
+
+.m-herohalf {
+  height: 500px;
+  background: #DDD;
+  border-left: 10px solid white;
+  border-right: 10px solid white;
+  border-bottom: 10px solid white;
+  background-attachment: fixed;
+  background-size: 100% auto;
+  background-position: top center;
+  background-repeat: none; }
+  .m-herohalf--top {
+    padding-top: 80px; }
+    .m-herohalf--top h1 {
+      line-height: 390px;
+      color: white; }
+    .m-herohalf--top .slogan {
+      text-align: center;
+      font-family: 'serif', serif; }
+
+/*
 .lookbook {
-  padding-top: 100px; }
-  .lookbook .js-masonry li {
-    padding: 0 !important;
-    margin-bottom: 2.3576515979%; }
-  .lookbook .js-masonry img {
-    width: 100%;
-    display: block; }
-  .lookbook .m-footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%; }
+	
+	padding-top: 100px;
+	
+	.js-masonry {
+		
+		li {
+			padding: 0 !important;
+			margin-bottom: 2.3576515979%;
+		}
+		
+		img {
+			width: 100%;
+			display: block;
+		}
+	}
+	
+	.m-footer {
+		position: fixed;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+	}
+	
+}
+*/
 /*# sourceMappingURL=main.css.map */
