--- a/styles/main.css
+++ b/styles/main.css
@@ -898,14 +898,18 @@ header {
   position: absolute;
   width: 100%;
   height: 100%;
-  border: 10px solid white; }
+  border: 10px solid white;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover; }
   .m-splash .hero-copy {
-    font-size: 2em;
+    font-size: 2.4em;
     font-weight: bold;
     line-height: 1.2;
-    text-indent: 0; }
+    text-indent: 0;
+    margin-top: 0; }
   .m-splash--launch {
-    background: black;
     color: white; }
     .m-splash--launch .m-callout {
       position: absolute;
@@ -994,22 +998,39 @@ header {
 
 .m-herohalf {
   height: 500px;
-  background: #DDD;
   border-left: 10px solid white;
   border-right: 10px solid white;
   border-bottom: 10px solid white;
   background-attachment: fixed;
-  background-size: 100% auto;
+  background-size: cover;
   background-position: top center;
   background-repeat: none; }
+  .m-herohalf h3 {
+    font-weight: 400;
+    letter-spacing: 2px; }
+  .m-herohalf p {
+    font-size: 1.3em;
+    line-height: 1.2;
+    font-weight: 800;
+    text-indent: 0; }
   .m-herohalf--top {
     padding-top: 80px; }
-    .m-herohalf--top h1 {
-      line-height: 390px;
-      color: white; }
     .m-herohalf--top .slogan {
       text-align: center;
       font-family: 'serif', serif; }
+
+.b-centered {
+  text-align: center; }
+
+.b-italics {
+  font-style: italic; }
+
+.quality .b-italics {
+  margin-top: 0;
+  font-size: 0.85em; }
+
+.b-white h1, .b-white h2, .b-white h3, .b-white h4, .b-white h5, .b-white h6, .b-white p {
+  color: white; }
 
 /*
 .lookbook {
@@ -1038,4 +1059,23 @@ header {
 	
 }
 */
+.m-lookbook {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding-top: 80px;
+  height: 100%;
+  width: 100%;
+  overflow: hidden; }
+
+.flexbox .m-herohalf {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
 /*# sourceMappingURL=main.css.map */
