--- a/styles/main.scss
+++ b/styles/main.scss
@@ -79,19 +79,26 @@ header {
 	width: 100%;
 	height: 100%;
 	border: 10px solid $white;
+	
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+	
 // 	overflow: auto;
 	
 	.hero-copy {
-		font-size: 2*$base-font-size;
+		font-size: 2.4*$base-font-size;
 		font-weight: bold;
 		line-height: 1.2;
 		text-indent: 0;
+		margin-top: 0;
 	}
 	
 	
 	&--launch {
 		
-		background: black; // $black;
+// 		background: black; // $black;
 		color: $white;
 		
 		.m-callout {
@@ -246,33 +253,59 @@ header {
 
 .m-herohalf {
 	height: 500px;
-	background: $light-gray;
+// 	background-color: $light-gray;
 	border-left: 10px solid $white;
 	border-right: 10px solid $white;
 	border-bottom: 10px solid $white;
 	
 	background-attachment: fixed;
-	background-size: 100% auto;
+	background-size: cover;
 	background-position: top center;
 	background-repeat: none;
+	
+	h3 {
+		font-weight: 400;
+		letter-spacing: 2px;
+	}
+	
+	p {
+		font-size: $base-font-size*1.3;
+		line-height: 1.2;
+		font-weight: 800;
+		text-indent: 0;
+	}
 	
 	
 	&--top {
 		padding-top: 80px;
-		
-		h1 {
-			line-height: 390px;
-			color: white;
-		}
 		
 		.slogan {
 			text-align: center;
 			font-family: $serif;
 		}
 	}
-	
-	
-	
+}
+
+.b-centered {
+	text-align: center;	
+}
+
+.b-italics {
+	font-style: italic;
+}
+
+.quality {
+	.b-italics {
+		margin-top: 0;
+		font-size: .85*$base-font-size;
+	}
+}
+
+.b-white {
+		
+		h1, h2, h3, h4, h5, h6, p {
+			color: white;
+		}
 }
 /*
 .lookbook {
@@ -301,3 +334,32 @@ header {
 	
 }
 */
+
+.m-lookbook {
+	
+	position: absolute;
+	top: 0;
+	left: 0;
+	padding-top: 80px;
+	height: 100%;
+	width: 100%;
+	overflow: hidden;
+	
+	li {
+		
+	}
+}
+
+
+
+.flexbox {
+	
+	.m-herohalf {
+		  display: flex;
+		  flex-direction: column;
+		  justify-content: center;
+	}
+	
+	
+	
+}
