--- a/styles/base/_buttons.scss
+++ b/styles/base/_buttons.scss
@@ -1,37 +1,3 @@
-button,
-input[type="submit"] {
-  @extend %button;
-  @include appearance(none);
-  border: none;
-  cursor: pointer;
-  user-select: none;
-  vertical-align: middle;
-  white-space: nowrap;
-}
-
-button.cta {
-	font-size: $base-font-size;
-	line-height: $base-font-size;
-	font-weight: bold;
-
-
-	&--white{
-		color: $white;  
-		
-		&:after {
-			content: "";
-			width: $base-font-size;
-			height: .85*$base-font-size;
-			margin-left: .5*$base-font-size;
-			display: inline-block;
-			background: url(../images/right-arrow@2x.png) center center no-repeat;
-			background: url(../images/right-arrow.svg) center center no-repeat;
-			background-size: 100% 100%;
-		}
-	  }
-  
-  
-}
 
 %button {
 	-webkit-font-smoothing: antialiased;
@@ -57,4 +23,49 @@ button.cta {
 	}
 
 	
+}
+
+button,
+input[type="submit"] {
+  @extend %button;
+  @include appearance(none);
+  border: none;
+  cursor: pointer;
+  user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+}
+
+
+.cta--white {
+	-webkit-font-smoothing: antialiased;
+	border-radius: $base-border-radius;
+	display: inline-block;
+	padding: 0;
+	text-decoration: none;
+	text-transform: uppercase;
+	
+	font-family: $sans-serif;
+	
+	font-size: $base-font-size;
+	line-height: $base-font-size;
+	font-weight: bold;
+	text-decoration: none;
+	text-transform: uppercase;
+
+		color: $white;  
+		
+		&:after {
+			content: "";
+			width: $base-font-size;
+			height: .85*$base-font-size;
+			margin-left: .5*$base-font-size;
+			display: inline-block;
+			background: url(../images/right-arrow@2x.png) center center no-repeat;
+			background: url(../images/right-arrow.svg) center center no-repeat;
+			background-size: 100% 100%;
+		}
+	  
+  
+  
 }
