--- a/styles/main.css
+++ b/styles/main.css
@@ -326,21 +326,24 @@ button, input[type="submit"] {
   padding: 0;
   text-decoration: none;
   text-transform: uppercase;
-  font-family: 'sans', sans-serif; }
+  font-family: 'sans', sans-serif;
+  /*
+&:after {
+		content: "";
+		width: $base-font-size;
+		height: .85*$base-font-size;
+		margin-left: .5*$base-font-size;
+		display: inline-block;
+		background: url(../images/right-arrow@2x.png) center center no-repeat;
+		background: url(../images/right-arrow.svg) center center no-repeat;
+		background-size: 100% 100%;
+	}
+*/ }
   button:hover, input[type="submit"]:hover {
     color: white; }
   button:disabled, input[type="submit"]:disabled {
     cursor: not-allowed;
     opacity: 0.5; }
-  button:after, input[type="submit"]:after {
-    content: "";
-    width: 1em;
-    height: 0.85em;
-    margin-left: 0.5em;
-    display: inline-block;
-    background: url(../images/right-arrow@2x.png) center center no-repeat;
-    background: url(../images/right-arrow.svg) center center no-repeat;
-    background-size: 100% 100%; }
 
 @font-face {
   font-family: 'sans';
@@ -581,37 +584,6 @@ dl {
     margin: 0; }
 
 button, input[type="submit"] {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  -ms-appearance: none;
-  -o-appearance: none;
-  appearance: none;
-  border: none;
-  cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  vertical-align: middle;
-  white-space: nowrap; }
-
-button.cta {
-  font-size: 1em;
-  line-height: 1em;
-  font-weight: bold; }
-  button.cta--white {
-    color: white; }
-    button.cta--white:after {
-      content: "";
-      width: 1em;
-      height: 0.85em;
-      margin-left: 0.5em;
-      display: inline-block;
-      background: url(../images/right-arrow@2x.png) center center no-repeat;
-      background: url(../images/right-arrow.svg) center center no-repeat;
-      background-size: 100% 100%; }
-
-button, input[type="submit"] {
   -webkit-font-smoothing: antialiased;
   background-color: transparent;
   border-radius: 2px;
@@ -626,6 +598,45 @@ button, input[type="submit"] {
     cursor: not-allowed;
     opacity: 0.5; }
 
+button, input[type="submit"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+  border: none;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  vertical-align: middle;
+  white-space: nowrap; }
+
+.cta--white {
+  -webkit-font-smoothing: antialiased;
+  border-radius: 2px;
+  display: inline-block;
+  padding: 0;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: 'sans', sans-serif;
+  font-size: 1em;
+  line-height: 1em;
+  font-weight: bold;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: white; }
+  .cta--white:after {
+    content: "";
+    width: 1em;
+    height: 0.85em;
+    margin-left: 0.5em;
+    display: inline-block;
+    background: url(../images/right-arrow@2x.png) center center no-repeat;
+    background: url(../images/right-arrow.svg) center center no-repeat;
+    background-size: 100% 100%; }
+
 html {
   -moz-box-sizing: border-box;
        box-sizing: border-box; }
@@ -633,9 +644,6 @@ html {
 *, *:before, *:after {
   -moz-box-sizing: inherit;
        box-sizing: inherit; }
-
-div {
-  overflow: auto; }
 
 /* Bitters 0.10.0
  * http://bitters.bourbon.io
@@ -942,16 +950,35 @@ header {
   font-size: 1.5em;
   line-height: 1.3; }
 
-.m-team {
-  margin-top: 3em; }
+.m-team, .m-shop {
+  margin: 3em;
+  padding-top: 20px; }
 
 .m-home-key-points {
   margin-bottom: 30px; }
 
-.m-team__member:nth-child(3n) {
+.m-team__member:nth-child(3n), .m-product:nth-child(3n) {
   margin-right: 0; }
-.m-team__member:nth-child(3n+1) {
+.m-team__member:nth-child(3n+1), .m-product:nth-child(3n+1) {
   clear: left; }
+.m-team__member .copy, .m-product .copy {
+  padding: 0 20px; }
+.m-team__member h4, .m-product h4 {
+  font-family: 'serif', serif;
+  font-weight: 800;
+  font-size: 1em;
+  color: rgba(0, 0, 0, 0.87);
+  line-height: 0.9;
+  border-bottom: solid 1px rgba(0, 0, 0, 0.87);
+  margin-top: 2em;
+  display: inline-block; }
+.m-team__member p, .m-product p {
+  font-family: 'serif', serif;
+  font-weight: 400;
+  font-size: 1em;
+  color: rgba(0, 0, 0, 0.87);
+  line-height: 1.25;
+  text-indent: 0; }
 
 .m-collage__image {
   position: absolute;
@@ -1059,15 +1086,23 @@ header {
 	
 }
 */
-.m-lookbook {
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding-top: 80px;
-  height: 100%;
-  width: 100%;
-  overflow: hidden; }
+/*
 
+.m-lookbook {
+	
+	position: absolute;
+	top: 0;
+	left: 0;
+	padding-top: 80px;
+	height: 100%;
+	width: 100%;
+	overflow: hidden;
+	
+	li {
+		
+	}
+}
+*/
 .flexbox .m-herohalf {
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -1078,4 +1113,103 @@ header {
   -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center; }
+
+/* Flickity
+------------------------- */
+#gallery {
+  padding-top: 80px; }
+  #gallery img {
+    padding: 0 5px; }
+
+/* Flickity
+------------------------- */
+.flickity-enabled {
+  position: relative; }
+
+.flickity-enabled:focus {
+  outline: none; }
+
+.flickity-viewport {
+  overflow: hidden;
+  position: relative;
+  cursor: -webkit-grab;
+  cursor: -moz-grab;
+  cursor: grab; }
+
+.flickity-viewport.is-pointer-down {
+  cursor: -webkit-grabbing;
+  cursor: -moz-grabbing;
+  cursor: grabbing; }
+
+.flickity-slider {
+  position: absolute;
+  width: 100%; }
+
+/* ---- previous/next buttons ---- */
+.flickity-prev-next-button {
+  position: absolute;
+  top: 50%;
+  width: 44px;
+  height: 44px;
+  border: none;
+  border-radius: 50%;
+  background: none;
+  cursor: pointer;
+  /* vertically center */
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%); }
+
+.flickity-prev-next-button.previous {
+  left: 17px; }
+
+.flickity-prev-next-button.next {
+  right: 17px; }
+
+.flickity-prev-next-button:disabled {
+  opacity: 0.3;
+  cursor: auto; }
+
+.flickity-prev-next-button:focus {
+  outline: none;
+  border: none; }
+
+.flickity-prev-next-button svg {
+  position: absolute;
+  left: 20%;
+  top: 20%;
+  width: 60%;
+  height: 60%; }
+
+.flickity-prev-next-button .arrow {
+  fill: white; }
+
+/* color & size if no SVG - IE8 and Android 2.3 */
+.flickity-prev-next-button.no-svg {
+  color: #333;
+  font-size: 26px; }
+
+/* ---- page dots ---- */
+.flickity-page-dots {
+  position: absolute;
+  width: 100%;
+  bottom: -25px;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-align: center;
+  line-height: 1; }
+
+.flickity-page-dots .dot {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  margin: 0 8px;
+  background: #333;
+  border-radius: 50%;
+  opacity: 0.25;
+  cursor: pointer; }
+
+.flickity-page-dots .dot.is-selected {
+  opacity: 1; }
 /*# sourceMappingURL=main.css.map */
