--- a/styles/main.scss
+++ b/styles/main.scss
@@ -144,15 +144,16 @@ header {
 	line-height: 1.3;
 }
 
-.m-team {
-	margin-top: $base-spacing*2;
+.m-team, .m-shop {
+	margin: $base-spacing*2;
+	padding-top: 20px;
 }
 
 .m-home-key-points {
 	margin-bottom: 30px;
 }
 
-.m-team__member {
+.m-team__member, .m-product {
 	
 	&:nth-child(3n) {
 		margin-right: 0;
@@ -161,6 +162,31 @@ header {
 	&:nth-child(3n+1) {
 		clear: left;
 	}
+	
+	.copy {
+		padding: 0 20px;
+	}
+	
+	h4 {
+		font-family: $serif;
+		font-weight: 800;
+		font-size: $base-font-size;
+		color: rgba(0,0,0,0.87);
+		line-height: .9;
+		border-bottom: solid 1px $black;
+		margin-top: $base-font-size*2;
+		display: inline-block;
+	}
+	
+	p {
+		font-family: $serif;
+		font-weight: 400;
+		font-size: $base-font-size;
+		color: rgba(0,0,0,0.87);
+		line-height: 1.25;
+		text-indent: 0;
+	}
+
 
 }
 
@@ -307,6 +333,12 @@ header {
 			color: white;
 		}
 }
+
+.lookbook {
+	div {
+//   overflow: visible;
+  	}
+}
 /*
 .lookbook {
 	
@@ -334,6 +366,7 @@ header {
 	
 }
 */
+/*
 
 .m-lookbook {
 	
@@ -349,6 +382,7 @@ header {
 		
 	}
 }
+*/
 
 
 
@@ -363,3 +397,116 @@ header {
 	
 	
 }
+
+
+/* Flickity
+------------------------- */
+
+#gallery {
+	padding-top: 80px;
+	
+	img {
+		padding: 0 5px;
+	}
+}
+
+/* Flickity
+------------------------- */
+
+.flickity-enabled {
+  position: relative;
+}
+
+.flickity-enabled:focus { outline: none; }
+
+.flickity-viewport {
+  overflow: hidden;
+  position: relative;
+  cursor: -webkit-grab;
+  cursor: grab;
+}
+
+.flickity-viewport.is-pointer-down {
+  cursor: -webkit-grabbing;
+  cursor: grabbing;
+}
+
+.flickity-slider {
+  position: absolute;
+  width: 100%;
+}
+
+/* ---- previous/next buttons ---- */
+
+.flickity-prev-next-button {
+  position: absolute;
+  top: 50%;
+  width: 44px;
+  height: 44px;
+  border: none;
+  border-radius: 50%;
+  background: none;
+//   background: hsla(0, 0%, 100%, 0.75);
+  cursor: pointer;
+  /* vertically center */
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.flickity-prev-next-button.previous { left: 17px; }
+.flickity-prev-next-button.next { right: 17px; }
+
+.flickity-prev-next-button:disabled {
+  opacity: 0.3;
+  cursor: auto;
+}
+
+.flickity-prev-next-button:focus {
+	outline: none;
+	border: none;
+}
+
+.flickity-prev-next-button svg {
+  position: absolute;
+  left: 20%;
+  top: 20%;
+  width: 60%;
+  height: 60%;
+}
+
+.flickity-prev-next-button .arrow {
+  fill: white;
+}
+
+/* color & size if no SVG - IE8 and Android 2.3 */
+.flickity-prev-next-button.no-svg {
+  color: #333;
+  font-size: 26px;
+}
+
+/* ---- page dots ---- */
+
+.flickity-page-dots {
+  position: absolute;
+  width: 100%;
+  bottom: -25px;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-align: center;
+  line-height: 1;
+}
+
+.flickity-page-dots .dot {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  margin: 0 8px;
+  background: #333;
+  border-radius: 50%;
+  opacity: 0.25;
+  cursor: pointer;
+}
+
+.flickity-page-dots .dot.is-selected { opacity: 1; }
