--- a/styles/main.scss
+++ b/styles/main.scss
@@ -289,6 +289,10 @@ header {
 	background-position: top center;
 	background-repeat: none;
 	
+	h1, h3, p {
+		text-shadow: rgba(0,0,0,0.32) 0 0 24px;
+	}
+	
 	h3 {
 		font-weight: 400;
 		letter-spacing: 2px;
