--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -85,12 +85,15 @@
 }
 
 body {
-  -webkit-font-smoothing: antialiased;
-  background-color: $base-background-color;
-  color: $base-font-color;
-  font-family: $base-font-family;
-  font-size: $base-font-size;
-  line-height: $base-line-height;
+	-webkit-font-smoothing: antialiased;
+	background-color: $base-background-color;
+	color: $base-font-color;
+	font-family: $base-font-family;
+	font-size: $base-font-size;
+	line-height: $base-line-height;
+	text-rendering: optimizeLegibility;
+	font-feature-settings: "kern" 1;
+	font-kerning: normal;
 }
 
 h1,
