--- a/styles/main.css
+++ b/styles/main.css
@@ -1,13 +1,12 @@
+@charset "UTF-8";
 /* Neat 1.7.0
  * http://neat.bourbon.io
  * Copyright 2012-2014 thoughtbot, inc.
  * MIT License */
 html {
-  -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
 *, *:before, *:after {
-  -moz-box-sizing: inherit;
   box-sizing: inherit; }
 
 /*! normalize.css v2.1.2 | MIT License | git.io/normalize */
@@ -110,7 +109,6 @@ dfn {
  * Address differences between Firefox and other browsers.
  */
 hr {
-  -moz-box-sizing: content-box;
   box-sizing: content-box;
   height: 0; }
 
@@ -259,8 +257,7 @@ button[disabled], html input[disabled] {
  * 2. Remove excess padding in IE 8/9.
  */
 input[type="checkbox"], input[type="radio"] {
-  -moz-box-sizing: border-box;
-       box-sizing: border-box;
+  box-sizing: border-box;
   /* 1 */
   padding: 0;
   /* 2 */ }
@@ -273,7 +270,6 @@ input[type="checkbox"], input[type="radio"] {
 input[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
-  -moz-box-sizing: content-box;
   /* 2 */
   box-sizing: content-box; }
 
@@ -400,7 +396,14 @@ body {
   color: rgba(0, 0, 0, 0.87);
   font-family: Calluna;
   font-size: 1em;
-  line-height: 1.5; }
+  line-height: 1.5;
+  text-rendering: optimizeLegibility;
+  -webkit-font-feature-settings: "kern" 1;
+     -moz-font-feature-settings: "kern" 1;
+          font-feature-settings: "kern" 1;
+  -webkit-font-kerning: normal;
+     -moz-font-kerning: normal;
+          font-kerning: normal; }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'sans', sans-serif;
@@ -453,8 +456,8 @@ a.cta {
   a.cta:after {
     content: "";
     width: 1em;
-    height: 0.7em;
-    margin-left: 0.5em;
+    height: .7em;
+    margin-left: .5em;
     display: inline-block;
     background: url(../images/right-arrow-black@2x.png) center center no-repeat;
     background: url(../images/right-arrow-black.svg) center center no-repeat;
@@ -508,7 +511,6 @@ label {
     display: none; }
 
 textarea, input[type="email"], input[type="number"], input[type="password"], input[type="search"], input[type="tel"], input[type="text"], input[type="url"], input[type="color"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="time"], input[type="week"], select[multiple=multiple] {
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-transition: border-color;
   transition: border-color;
@@ -630,20 +632,18 @@ button, input[type="submit"] {
   .cta--white:after {
     content: "";
     width: 1em;
-    height: 0.85em;
-    margin-left: 0.5em;
+    height: .85em;
+    margin-left: .5em;
     display: inline-block;
     background: url(../images/right-arrow@2x.png) center center no-repeat;
     background: url(../images/right-arrow.svg) center center no-repeat;
     background-size: 100% 100%; }
 
 html {
-  -moz-box-sizing: border-box;
-       box-sizing: border-box; }
+  box-sizing: border-box; }
 
 *, *:before, *:after {
-  -moz-box-sizing: inherit;
-       box-sizing: inherit; }
+  box-sizing: inherit; }
 
 /* Bitters 0.10.0
  * http://bitters.bourbon.io
@@ -657,7 +657,7 @@ html {
     display: table;
     clear: both; }
 
-.l-omega:last-child {
+.l-omega {
   margin-right: 0; }
 
 .l-l1 {
@@ -865,7 +865,7 @@ header {
 
 .m-globalnav {
   line-height: 40px;
-  padding: 20px;
+  padding: 20px 30px;
   float: left;
   display: block;
   margin-right: 2.3576515979%;
@@ -884,6 +884,9 @@ header {
       background: url(../images/logo.svg) center center no-repeat;
       width: 78px;
       height: 18px; }
+      .m-globalnav .brand a:focus {
+        border: none;
+        outline: none; }
   .m-globalnav ul {
     float: right; }
   .m-globalnav li {
@@ -893,9 +896,12 @@ header {
   .m-globalnav a {
     color: rgba(0, 0, 0, 0.87);
     text-decoration: none;
-    font-size: 0.875em;
+    font-size: .75em;
     letter-spacing: 2px;
     font-weight: 600; }
+    .m-globalnav a:focus {
+      border: none;
+      outline: none; }
 
 .m-splash {
   /*
@@ -909,19 +915,19 @@ header {
   border: 10px solid white;
   background-position: center center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-attachment: scroll;
   background-size: cover; }
   .m-splash .hero-copy {
     font-size: 2.4em;
-    font-weight: bold;
-    line-height: 1.2;
+    font-weight: 400;
+    line-height: 1;
     text-indent: 0;
     margin-top: 0; }
   .m-splash--launch {
     color: white; }
     .m-splash--launch .m-callout {
       position: absolute;
-      bottom: 100px;
+      bottom: 30px;
       left: 30px; }
 
 .m-scrollcta {
@@ -932,18 +938,44 @@ header {
   .m-scrollcta a {
     color: white;
     font-family: 'sans', sans-serif;
-    font-size: 0.8em;
+    font-size: .8em;
     line-height: 1em;
     text-decoration: none; }
   .m-scrollcta:after {
     content: "";
-    width: 0.3em;
-    height: 0.45em;
-    margin-left: 0.15em;
+    width: .3em;
+    height: .45em;
+    margin-left: .15em;
     display: inline-block;
     background: url(../images/small-down-arrow@2x.png) center center no-repeat;
     background: url(../images/small-down-arrow.svg) center center no-repeat;
     background-size: 100% 100%; }
+
+.m-socialnav {
+  float: left;
+  display: block;
+  position: absolute;
+  bottom: 30px;
+  right: 30px; }
+  .m-socialnav ul {
+    float: left;
+    display: block; }
+    .m-socialnav ul li {
+      float: left;
+      display: block;
+      margin-left: 15px; }
+      .m-socialnav ul li a {
+        float: left;
+        display: block;
+        width: 20px;
+        height: 20px; }
+        .m-socialnav ul li a:focus {
+          outline: none;
+          border: none; }
+        .m-socialnav ul li a img {
+          width: 20px;
+          height: 20px;
+          fill: white; }
 
 .m-hero-copy {
   margin: 3em 0;
@@ -968,7 +1000,7 @@ header {
   font-weight: 800;
   font-size: 1em;
   color: rgba(0, 0, 0, 0.87);
-  line-height: 0.9;
+  line-height: .9;
   border-bottom: solid 1px rgba(0, 0, 0, 0.87);
   margin-top: 2em;
   display: inline-block; }
@@ -979,6 +1011,18 @@ header {
   color: rgba(0, 0, 0, 0.87);
   line-height: 1.25;
   text-indent: 0; }
+
+.m-product .copy {
+  text-align: center; }
+  .m-product .copy h4 {
+    opacity: 0;
+    margin: 0;
+    position: relative;
+    top: -50px;
+    -webkit-transition: 0.54s all ease-in-out;
+            transition: 0.54s all ease-in-out; }
+.m-product:hover .copy h4 {
+  opacity: 1; }
 
 .m-collage__image {
   position: absolute;
@@ -1056,7 +1100,7 @@ header {
 
 .quality .b-italics {
   margin-top: 0;
-  font-size: 0.85em; }
+  font-size: .85em; }
 
 .b-white h1, .b-white h2, .b-white h3, .b-white h4, .b-white h5, .b-white h6, .b-white p {
   color: white; }
@@ -1106,12 +1150,16 @@ header {
 }
 */
 .flexbox .m-herohalf {
+  display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
   -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: center;
   -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center; }
@@ -1135,12 +1183,10 @@ header {
   overflow: hidden;
   position: relative;
   cursor: -webkit-grab;
-  cursor: -moz-grab;
   cursor: grab; }
 
 .flickity-viewport.is-pointer-down {
   cursor: -webkit-grabbing;
-  cursor: -moz-grabbing;
   cursor: grabbing; }
 
 .flickity-slider {
@@ -1214,4 +1260,3 @@ header {
 
 .flickity-page-dots .dot.is-selected {
   opacity: 1; }
-/*# sourceMappingURL=main.css.map */
